{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 45,
  "lineage": "b59d2ca1-eee3-7d15-06fa-67967ec47166",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jegan_ubuntu1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0026b1df9711a8567",
            "arn": "arn:aws:ec2:ap-south-1:831955480324:instance/i-0024e97282e57593b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0024e97282e57593b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0804efd4e4585e158"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0804efd4e4585e158",
            "private_dns": "ip-192-168-1-100.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.100",
            "public_dns": "ec2-13-232-245-124.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.232.245.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b690ddaf1665d26c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-039bfabc7afd3e3b1",
            "tags": {
              "Name": "jegan-ubuntu1"
            },
            "tags_all": {
              "Name": "jegan-ubuntu1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-060c8229ee3fb7ec8"
            ]
          },
          "dependencies": [
            "aws_network_interface.tektutor_nic",
            "aws_security_group.tektutor_security_group",
            "aws_subnet.tektutor_subnet_1",
            "aws_vpc.tektutor_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tektutor_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831955480324:internet-gateway/igw-03103e8e2568cbbc7",
            "id": "igw-03103e8e2568cbbc7",
            "owner_id": "831955480324",
            "tags": {
              "Name": "tektutor_internet_gateway"
            },
            "tags_all": {
              "Name": "tektutor_internet_gateway"
            },
            "vpc_id": "vpc-08eca61dcdfd0355c"
          },
          "dependencies": [
            "aws_vpc.tektutor_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "tektutor_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831955480324:network-interface/eni-0804efd4e4585e158",
            "id": "eni-0804efd4e4585e158",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:f6:b5:67:2e:f7",
            "owner_id": "831955480324",
            "private_dns_name": "ip-192-168-1-100.ap-south-1.compute.internal",
            "private_ip": "192.168.1.100",
            "private_ip_list": [
              "192.168.1.100"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.1.100"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-060c8229ee3fb7ec8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-039bfabc7afd3e3b1",
            "tags": {
              "Name": "Primary Network Interface"
            },
            "tags_all": {
              "Name": "Primary Network Interface"
            }
          },
          "dependencies": [
            "aws_security_group.tektutor_security_group",
            "aws_subnet.tektutor_subnet_1",
            "aws_vpc.tektutor_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tektutor_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831955480324:route-table/rtb-0a32d55ce0c7193da",
            "id": "rtb-0a32d55ce0c7193da",
            "owner_id": "831955480324",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03103e8e2568cbbc7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tektutor_route_table"
            },
            "tags_all": {
              "Name": "tektutor_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08eca61dcdfd0355c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tektutor_internet_gateway",
            "aws_vpc.tektutor_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tektutor_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0745904a962e93f59",
            "route_table_id": "rtb-0a32d55ce0c7193da",
            "subnet_id": "subnet-039bfabc7afd3e3b1"
          },
          "dependencies": [
            "aws_internet_gateway.tektutor_internet_gateway",
            "aws_route_table.tektutor_route_table",
            "aws_subnet.tektutor_subnet_1",
            "aws_vpc.tektutor_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tektutor_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831955480324:security-group/sg-060c8229ee3fb7ec8",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060c8229ee3fb7ec8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http incoming requests",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https incoming requests",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_web",
            "name_prefix": "",
            "owner_id": "831955480324",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-08eca61dcdfd0355c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tektutor_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tektutor_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831955480324:subnet/subnet-039bfabc7afd3e3b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039bfabc7afd3e3b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "831955480324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tektutor_subnet_1"
            },
            "tags_all": {
              "Name": "tektutor_subnet_1"
            },
            "vpc_id": "vpc-08eca61dcdfd0355c"
          },
          "dependencies": [
            "aws_vpc.tektutor_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tektutor_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:831955480324:vpc/vpc-08eca61dcdfd0355c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0df3a1be8c43e8dd1",
            "default_route_table_id": "rtb-066b6f2518d60dc85",
            "default_security_group_id": "sg-081acc97dd5ddd5af",
            "dhcp_options_id": "dopt-01e4fe69",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08eca61dcdfd0355c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066b6f2518d60dc85",
            "owner_id": "831955480324",
            "tags": {
              "Name": "tektutor_vpc"
            },
            "tags_all": {
              "Name": "tektutor_vpc"
            }
          }
        }
      ]
    }
  ]
}